# ASAGI

./: .gitignore  .gitmodules  .travis.yml  01__build_8h.xhtml  01__build_8h_source.xhtml  02__usage_8h.xhtml  02__usage_8h_source.xhtml  03__linux-cluster_8h_source.xhtml  03__troubleshooting_8h.xhtml  03__troubleshooting_8h_source.xhtml  04__troubleshooting_8h_source.xhtml  CMakeCCompilerId_8c_source.xhtml  CMakeCXXCompilerId_8cpp_source.xhtml  CMakeFortranCompilerId_8F_source.xhtml  CMakeLists.txt  Doxyfile.in  README.md  Troubleshooting.xhtml  adaptivegridcontainer.cpp  adaptivegridcontainer.h  adaptivegridcontainer_8cpp.xhtml  adaptivegridcontainer_8cpp_source.xhtml  adaptivegridcontainer_8h.xhtml  adaptivegridcontainer_8h_source.xhtml  allocator_8h.xhtml  allocator_8h_source.xhtml  annotated.xhtml  arraygrid.cpp  arraygrid.h  arraytype_8cpp.xhtml  arraytype_8cpp_source.xhtml  arraytype_8h.xhtml  arraytype_8h_source.xhtml  arraytypetest_8cpp.xhtml  arraytypetest_8cpp_source.xhtml  asagi.cpp  asagi_8cpp.xhtml  asagi_8cpp_source.xhtml  asagi_8f90.xhtml  asagi_8f90_source.xhtml  (+964 more)
CMake/: pkg-config.pc.in
allocator/: allocator.h  default.h  defaultallocator.h  mpialloc.h  mpiallocator.h
blocks/: CMakeLists.txt  blockmanager.cpp  blockmanager.h  lru.cpp  lru.h
cache/: CMakeLists.txt  cachelist.h  cachemanager.h  lru.h
debug/: dbg.cpp  dbg.h
documentation/: CMakeLists.txt  Doxyfile.in  Doxyfile.interface.in  documentation.tex  doxygen.sty  example.h  gh_pages.sh  installation.tex  interface.tex  linux-cluster.tex  mainpage.h  minimal.c  minimal.cpp  minimal.f90  troubleshooting.tex  usage.tex
documentation/images/: cell-centered.tex  vertex-centered.tex
documentation/user/: 01_build.h  02_usage.h  03_linux-cluster.h  03_troubleshooting.h  04_troubleshooting.h  CMakeLists.txt
documentation/user/examples/: CMakeLists.txt  minimal.c  minimal.cpp  minimal.f90
documentation/user/images/: valueposition.eps  valueposition.tex
examples/: CMakeLists.txt
examples/c/: CMakeLists.txt  simple.c
examples/cpp/: CMakeLists.txt  array.cpp  exportpng.cpp  simple.cpp
examples/f90/: CMakeLists.txt  buf.f90  simple.f90
examples/f95/: CMakeLists.txt  buf.f95  simple.f95
fortran/: CMakeLists.txt  pointerarray.h  string.cpp  string.h
grid/: CMakeLists.txt  adaptivegridcontainer.cpp  adaptivegridcontainer.h  constants.h  container.cpp  container.h  distcachegrid.cpp  distcachegrid.h  diststaticgrid.cpp  diststaticgrid.h  grid.cpp  grid.h  gridcontainer.cpp  gridcontainer.h  largegrid.cpp  largegrid.h  localcachegrid.cpp  localcachegrid.h  localstaticgrid.cpp  localstaticgrid.h  mpicachegrid.cpp  mpicachegrid.h  multigrid.cpp  multigrid.h  passthroughgrid.cpp  passthroughgrid.h  simplecontainer.cpp  simplecontainer.h  simplegridcontainer.cpp  simplegridcontainer.h  staticgrid.cpp  staticgrid.h  typedcontainer.h
grid/level/: CMakeLists.txt  blocked.h  cache.h  cachedist.h  full.h  fulldist.h  level.cpp  level.h  passthrough.cpp  passthrough.h
include/: asagi.f90  asagi.h  asagi.inc  database.f95  database.h  database.inc
io/: CMakeLists.txt  netcdf.cpp  netcdf.h  netcdfreader.cpp  netcdfreader.h  png.cpp  png.h  pngwriter.cpp  pngwriter.h
magic/: nulltype.h  typelist.h
mpi/: CMakeLists.txt  commthread.cpp  commthread.h  lockassert.h  mpicomm.cpp  mpicomm.h  mutex.cpp  mutex.h  nompicomm.h  scorephelper.h
numa/: CMakeLists.txt  nonuma.cpp  nonuma.h  numa.cpp  numa.h  numacomm.h
perf/: CMakeLists.txt  counter.cpp  counter.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6e.js  all_7.js  all_70.js  all_72.js  all_73.js  all_74.js  all_76.js  all_77.js  all_7e.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  (+160 more)
tests/: CMakeLists.txt  adaptivegrid2d.cpp  cachegrid2d.cpp  cachempigrid2d.cpp  cachempinumagrid2d.cpp  cachempithreadgrid2d.cpp  cachempithreadnumagrid2d.cpp  cachempiwingrid2d.cpp  cachempiwingrid2d2.cpp  cachempiwinnumagrid2d.cpp  cachenumagrid2d.cpp  fortran2d.f90  fullgrid2d.cpp  fullgrid2darray.cpp  fullgrid2dbs.cpp  fullgrid2dscale.cpp  fullgrid2dstruct.cpp  fullgrid3d.cpp  fullmpigrid2d.cpp  fullmpinumacachegrid2d.cpp  fullmpinumagrid2d.cpp  fullmpinumagrid2d2.cpp  fullmpithreadgrid2d.cpp  fullmpithreadnumacachegrid2d.cpp  fullnumagrid2d.cpp  grid1d.cpp  grid1dpseudo.cpp  grid2d.cpp  grid3d.cpp  largegrid1d.cpp  largegrid2d.cpp  localcachegrid2d.cpp  passthroughgrid2d.cpp  prepare.cpp  simple.cpp  staticgrid2d.cpp  testdefines.h
tests/c/: CMakeLists.txt  simple.c
tests/cpp/: CMakeLists.txt  exportpng.cpp  simple.cpp
tests/f95/: CMakeLists.txt  simple.f95
tests/fortran/: CMakeLists.txt  simple.f
tests/performance/: CMakeLists.txt  access_2d.cpp  access_2d_int.cpp  access_2d_nodefault.cpp  access_fast.cpp  access_interface.cpp  prepare.cpp
tests/unittest/: CMakeLists.txt  globaltest.h  gridtest.h  run.tpl
tests/unittest/blocks/: CMakeLists.txt  blockmanagertest.h
tests/unittest/cache/: CMakeLists.txt  cachelisttest.h  cachemanagertest.h
tests/unittest/grid/: CMakeLists.txt  gridtest.h
tests/unittest/grid/level/: CMakeLists.txt  fulltest.h  passthroughtest.h
tests/unittest/io/: CMakeLists.txt  netcdfreadertest.h
tests/unittest/mpi/: CMakeLists.txt  commthread.h
tests/unittest/numa/: CMakeLists.txt  numacommtest.h  numatest.h
tests/unittest/threads/: CMakeLists.txt  oncetest.h  synctest.h
tests/unittest/types/: CMakeLists.txt  arraytypetest.h
threads/: CMakeLists.txt  cxxmutex.h  mutex.h  noopmutex.h  once.h  pthreadmutex.h  sync.h
transfer/: mpicache.h  mpifull.h  mpino.h  mpithreadcache.h  mpithreadfull.h  mpiwincache.h  mpiwinfull.h  numacache.h  numafull.h  numafullcache.h  numano.h
types/: CMakeLists.txt  arraytype.cpp  arraytype.h  basictype.cpp  basictype.h  structtype.cpp  structtype.h  type.cpp  type.h
utils/: dbg.h  logger.h  stringutils.h  timeutils.h
(+7 files in other folders)
